makefile and parser changes

--- a/project-1/CMakeLists.txt
+++ b/project-1/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
         echo_client.c
-        echo_server.c
-        server.c log.c)
+        lisod.c
+        log.c)
 
 add_executable(starter_code ${SOURCE_FILES})
