--- a/project-1/Makefile
+++ b/project-1/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
 CFLAGS=-I.
-DEPS = parse.h y.tab.h log.h
-OBJ = y.tab.o lex.yy.o parse.o log.o lisod.o
-FLAGS = -g -Wall -Werror
+DEPS = parse.h y.tab.h log.h process_request.h
+OBJ = y.tab.o lex.yy.o parse.o log.o process_request.o lisod.o
+FLAGS = -g -Wall
 
 default:lisod
 
@@ -18,8 +18,5 @@ y.tab.c: parser.y
 lisod: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS)
 
-example: y.tab.o lex.yy.o parse.o example.o
-	$(CC) -o $@ $^ $(CFLAGS)
-
 clean:
-	rm -f *~ *.o lisod log.c log.h lex.yy.c y.tab.c y.tab.h
+	rm -f *~ *.o lisod log.c log.h process_request.c process_request.h lex.yy.c y.tab.c y.tab.h
